--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,16 @@ header {
     border-color:  #333333;
 }
 
+.msg{
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+    width: 100%;
+    margin-bottom: 0;
+    text-align: center;
+    padding: 10px;
+}
+
 
 /* Navbar*/
 #navbar img{
@@ -48,7 +58,7 @@ header {
 #navbar {
     justify-content: space-between;
     background-color: cadetblue;
-    padding: 2px 0;
+    padding: 0px 0;
 }
 
 #navbar a {
@@ -103,12 +113,12 @@ header {
 }
 
 #events-container .card {
-    flex: 1 1 0;
+    flex: 1 1 24%;
     max-width: 25%;
     border-radius: 10px;
     padding: 0;
     margin: 5px;
-    padding-bottom: 15px;
+    padding-bottom: .5%;
 }
 
 #events-container img {
@@ -141,8 +151,7 @@ header {
 /* Footer */
 footer{
 text-align: center;
-text-decoration: none;
-background-color: #353e48;
+background-color: cadetblue;
 color: #fff;
 padding: 30px;
 position: absolute;
@@ -152,4 +161,66 @@ width: 100%;
 
 footer p {
     margin-bottom: 0;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+
+/* Event Create Page */
+#event-create-container {
+    padding: 30px
+}
+
+#event-create-container label{
+    font-weight: bold;
+    padding-top: 20px;
+}
+
+#event-create-container input, 
+#event-create-container select, 
+#event-create-container textarea {
+    font-size: 12px;
+}
+
+#event-create-container div.sendBtnBox {
+        padding-top: 20px;
+}
+
+/* Event Page*/
+#image-container, 
+#info-container {
+    margin-top: 30px;
+}
+
+#image-container img{
+    border-radius: 10px;
+}
+
+#info-container h1 {
+    font-size: 36px;
+    font-weight: 900;
+}
+
+#info-container h3, 
+#description-container h3{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#info-container p {
+    margin: 0;
+    font-size: 14px;
+    display: flex;
+}
+
+#info-container ion-icon {
+    font-size: 20px;
+    color: #333333;
+    margin-right: 5px;
+}
+
+#info-container #event-submit {
+    margin: 20px 0;
 }
