--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -244,7 +244,7 @@ a {
     vertical-align: middle;
 }
 
-ion-icon#trash-outline{
+ion-icon#trash-outline, ion-icon#exit-outline{
     color: #ffffff;
 }
 
