--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,6 +49,15 @@ header {
     padding: 10px;
 }
 
+#info-container .already-joined-msg {
+    margin: 15px 0;
+    color: #004085;
+    background-color: #cce5ff;
+    border: 1px solid #88daff;
+    padding: 10px;
+    width: 330px;
+}
+
 
 /* Navbar*/
 #navbar img{
